# g4fire

./: CMakeLists.txt  Config.cmake.in  README.md  g4fireConfig.cmake.in  notes.md
cmake/: Geant4.cmake
include/SimCore/: APrimePhysics.h  AuxInfoReader.h  DetectorConstruction.h  ParallelWorld.h  PluginFactory.h  PrimaryGenerator.h  RunManager.h  SensitiveDetector.h  TrackMap.h  UserAction.h
include/SimCore/G4User/: TrackingAction.h
include/SimCore/LHE/: LHEEvent.h  LHEParticle.h  LHEReader.h
include/SimCore/Persist/: RootPersistencyManager.h
include/SimCore/SDs/: EcalSD.h  HcalSD.h  ScoringPlaneSD.h  TrackerSD.h  TrigScintSD.h
include/g4fire/: CalorimeterSD.h  ConditionsInterface.h  DetectorConstruction.h  EcalHitIO.h  EcalSD.h  G4CalorimeterHit.h  G4Session.h  G4TrackerHit.h  GammaPhysics.h  GeneralParticleSource.h  HcalSD.h  LHEEvent.h  LHEParticle.h  LHEPrimaryGenerator.h  LHEReader.h  MagneticFieldMap3D.h  MagneticFieldStore.h  MultiParticleGunPrimaryGenerator.h  ParallelWorld.h  Parameters.h  ParticleGun.h  PluginFactory.h  PrimaryGenerator.h  PrimaryGeneratorAction.h  RootCompleteReSim.h  RootSimFromEcalSP.h  RunManager.h  ScoringPlaneSD.h  Simulator.h  TrackMap.h  TrackerSD.h  TransientInformation.h  TrigScintSD.h  USteppingAction.h  UserAction.h  UserEventAction.h  UserEventInformation.h  UserPrimaryParticleInformation.h  UserRegionInformation.h  UserRunAction.h  (+4 more)
include/g4fire/BiasOperators/: DarkBrem.h  ElectroNuclear.h  GammaToMuPair.h  K0LongInelastic.h  NeutronInelastic.h  PhotoNuclear.h
include/g4fire/DarkBrem/: APrimePhysics.h  DarkBremVertexLibraryModel.h  G4APrime.h  G4eDarkBremsstrahlung.h
include/g4fire/Event/: SimCalorimeterHit.h
include/g4fire/Geo/: AuxInfoReader.h  GDMLParser.h  Parser.h  ParserFactory.h
include/g4fire/Persist/: RootPersistencyManager.h
include/g4fire/biasing/: DarkBrem.h  ElectroNuclear.h  GammaToMuPair.h  K0LongInelastic.h  NeutronInelastic.h  PhotoNuclear.h
include/g4fire/darkbrem/: APrimePhysics.h  DarkBremVertexLibraryModel.h  G4eDarkBremsstrahlung.h
include/g4fire/event/: EventBuilder.h  SimCalorimeterHit.h  SimParticle.h  SimTrackerHit.h
include/g4fire/geo/: GDMLParser.h  Parser.h  ParserFactory.h
include/g4fire/lhe/: LHEEvent.h  LHEReader.h
include/g4fire/user/: Action.h  BiasingOperator.h  DetectorConstruction.h  PhysicsConstructor.h  PrimaryGenerator.h  SensitiveDetector.h
include/g4fire/version/: Version.h.in
ldmx/: AuxInfoReader.cxx  CalorimeterSD.cxx  DetectorConstruction.cxx  EcalSD.cxx  EcalSD.h  GDMLParser.h  GammaPhysics.cxx  HcalSD.h  ParserFactory.cxx  ParserFactory.h  README.md  TrackerSD.h  TrigScintSD.cxx  VisAttributesStore.h
ldmx/BiasOperators/: DarkBrem.h  ElectroNuclear.h  GammaToMuPair.h  PhotoNuclear.h
ldmx/DarkBrem/: APrimePhysics.cxx  DarkBremVertexLibraryModel.cxx  G4APrime.cxx  G4eDarkBremsstrahlung.cxx
python/: bias_operators.py.in  ecal_pn_example.py.in  examples.py.in  generators.py.in  sensitive_detectors.py  sim_example.py.in  simcfg.py.in  simulator.py.in
python/g4fire/: __init__.py  _bias_operators.py.in  _detectors.py  _generators.py  _primary_generator.py  _simulator.py  _user_action.py
python/g4fire/cfg/: __init__.py  _parameters.py
src/: EcalSD.cxx
src/SimCore/: APrimePhysics.cxx  AuxInfoReader.cxx  DetectorConstruction.cxx  EcalHitIO.cxx  ParallelWorld.cxx  PluginFactory.cxx  RunManager.cxx  ScoringPlaneSD.cxx  SensitiveDetector.cxx  Simulator.cxx  TrackMap.cxx  UserAction.cxx
src/SimCore/G4User/: SteppingAction.cxx  TrackingAction.cxx
src/SimCore/Generators/: RootCompleteReSim.cxx  RootSimFromEcalSP.cxx
src/SimCore/LHE/: LHEEvent.cxx  LHEParticle.cxx  LHEReader.cxx
src/SimCore/Persist/: RootPersistencyManager.cxx  SimParticleBuilder.cxx
src/SimCore/SDs/: EcalSD.cxx  HcalSD.cxx  ScoringPlaneSD.cxx  TrackerSD.cxx  TrigScintSD.cxx
src/g4fire/: CalorimeterSD.cxx  DetectorConstruction.cxx  EcalHitIO.cxx  EcalSD.cxx  G4CalorimeterHit.cxx  G4Session.cxx  G4Session.h  G4TrackerHit.cxx  GammaPhysics.cxx  GeneralParticleSource.cxx  HcalSD.cxx  LHEEvent.cxx  LHEParticle.cxx  LHEPrimaryGenerator.cxx  LHEReader.cxx  MagneticFieldMap3D.cxx  MultiParticleGunPrimaryGenerator.cxx  ParallelWorld.cxx  ParticleGun.cxx  PluginFactory.cxx  PrimaryGenerator.cxx  PrimaryGeneratorAction.cxx  RootCompleteReSim.cxx  RootSimFromEcalSP.cxx  RunManager.cxx  ScoringPlaneSD.cxx  Simulator.cxx  Simulator.h  TrackMap.cxx  TrackerSD.cxx  TrigScintSD.cxx  USteppingAction.cxx  UserAction.cxx  UserEventAction.cxx  UserEventInformation.cxx  UserRegionInformation.cxx  UserRunAction.cxx  UserStackingAction.cxx  UserTrackInformation.cxx  UserTrackingAction.cxx  (+2 more)
src/g4fire/BiasOperators/: DarkBrem.cxx  ElectroNuclear.cxx  GammaToMuPair.cxx  K0LongInelastic.cxx  NeutronInelastic.cxx  PhotoNuclear.cxx
src/g4fire/DarkBrem/: APrimePhysics.cxx  DarkBremVertexLibraryModel.cxx  G4APrime.cxx  G4eDarkBremsstrahlung.cxx  print_dark_brem_xsec_table.cxx.in
src/g4fire/Event/: SimCalorimeterHit.cxx  SimTrackerHit.cxx
src/g4fire/Geo/: AuxInfoReader.cxx  GDMLParser.cxx  ParserFactory.cxx
src/g4fire/Persist/: RootPersistencyManager.cxx
src/g4fire/biasing/: DarkBrem.cxx  ElectroNuclear.cxx  GammaToMuPair.cxx  K0LongInelastic.cxx  NeutronInelastic.cxx  PhotoNuclear.cxx
src/g4fire/darkbrem/: APrimePhysics.cxx  DarkBremVertexLibraryModel.cxx  G4APrime.cxx  G4eDarkBremsstrahlung.cxx  print_dark_brem_xsec_table.cxx.in
src/g4fire/event/: EventBuilder.cxx  SimCalorimeterHit.cxx  SimParticle.cxx  SimTrackerHit.cxx
src/g4fire/g4user/: EventAction.cxx  EventAction.h  PrimaryGeneratorAction.cxx  PrimaryGeneratorAction.h  RunAction.cxx  RunAction.h  StackingAction.cxx  StackingAction.h  SteppingAction.cxx  SteppingAction.h  TrackingAction.cxx  TrackingAction.h
src/g4fire/geo/: AuxInfoReader.cxx  GDMLParser.cxx  ParserFactory.cxx
src/g4fire/lhe/: LHEEvent.cxx  LHEParticle.cxx  LHEReader.cxx
src/g4fire/primary_generators/: GeneralParticleSource.h  LHEPrimaryGenerator.cxx
src/g4fire/user/: Action.cxx  BiasingOperator.cxx  PhysicsConstructor.cxx  (+3 more)
test/: DarkBremProcessTest.cxx.in  basic.py
(+7 files in other folders)
